--- a/index.html
+++ b/index.html
@@ -1,22 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>openlab</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<section>
-		<div class="prvaSekcia">
-			<h1 class="nadpis">Inštitút stredoškolského<br>odborného vzdelávania<br> <strong>zameraný na IT & AI</strong> </h1>
-			<p>Realizujeme odborné vzdelávanie zamerané na IT pre <br> štátne školy ako nový štandard formálneho vzdelávania</p>
-			<img class="prvyObrazok" src="assets/main-home.webp" alt="">
-		</div>
-	</section>
-	<div>
-		
-	</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>openlab</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section>
+      <div class="prvaSekcia">
+        <h1 class="nadpis">
+          Inštitút stredoškolského<br />odborného vzdelávania<br />
+          <strong>zameraný na IT & AI</strong>
+        </h1>
+        <p>
+          Realizujeme odborné vzdelávanie zamerané na IT pre štátne školy <br />
+          ako nový štandard formálneho vzdelávania
+        </p>
+        <img class="prvyObrazok" src="assets/main-home.webp" alt="" />
+      </div>
+    </section>
+    <section>
+      <div class="druhaSekcia">
+        <h1 class="druhyNadpis">Prečo <strong>OpenLab</strong></h1>
+        <p>
+          V OpenLabe študentov učíme najnovšie technológie. Zároveň im dávame
+          veľkú slobodu, pričom ich vedieme k zodpovednosti a samostatnosti,
+          učíme ich <br />
+          princípy partnerského prístupu, pracovať v tíme, trénujeme ich
+          schopnosti sebareflexie a podnecujeme ich kreativitu. Takto študentov
+          pripravujeme <br />
+          osobnostne aj tech zručnosťami na veľké veci, ktoré môžu v budúcnosti
+          tvoriť.
+        </p>
+      </div>
+    </section>
+    <section class="aMimir">
+      <div class="goofy1">
+        <img src="assets/zelenavec.svg" alt="" />
+        <h3>Celospoločenský rozvoj</h3>
+        <div class="osnovy">
+          <p>
+            Osnovy aj učebné materiály pre všetky tech<br />oblasti sú open
+            source.
+          </p>
+        </div>
+      </div>
+      <div class="goofy1">
+        <img src="assets/cervenavec.svg" alt="" />
+        <h3>Učenie praxou</h3>
+        <div class="osnovy">
+          <p>Študentov vedieme k tímovému riešeniu<br />problémov.</p>
+        </div>
+      </div>
+      <div class="goofy1">
+        <img src="assets/zltavec.svg" alt="" />
+        <h3>Učenie praxou</h3>
+        <div class="osnovy">
+          <p>Vytvárame šikovné tímy schopné riešiť veľké<br />problémy.</p>
+        </div>
+      </div>
+    </section>
+    <section class="tretiaSekcia">
+      <div class="tretiaSekciaSub">
+        <h2 class="tretiNadpis">Naša vízia <strong> v OpenLabe</strong></h2>
+        <div class="boliMaHlava">
+          <p>
+            Veríme, že otvorený prístup a kvalitné vzdelanie sú základom úspechu
+            jednotlivca ako aj prosperujúcej spoločnosti.
+          </p>
+          <p>
+            si, že ak chceme niečo zmeniť, musíme ísť príkladom. Našim cieľom je
+            rozšíriť princípy OpenLab-u na všetkých úrovniach škôl a nastaviť
+            svetový štandard vzdelávania v školstve v technológiách.
+          </p>
+        </div>
+      </div>
+      <div class="kocky">
+        <div class="kocka1">
+          <h1 class="h1JeNadmerneKomicke">6</h1>
+          <h4 class="h4JeTaktiezKomicke">tried</h4>
+        </div>
+        <div class="kocka2">
+          <h1 class="h1JeNadmerneKomicke">267</h1>
+          <h4 class="h4JeTaktiezKomicke">študentov</h4>
+        </div>
+        <div class="kocka3">
+          <h1 class="h1JeNadmerneKomicke">12</h1>
+          <h4 class="h4JeTaktiezKomicke">LabMsatrov</h4>
+        </div>
+        <div class="kocka4">
+          <h1 class="h1JeNadmerneKomicke">2</h1>
+          <h4 class="h4JeTaktiezKomicke">školy</h4>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
